[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/battle-bg.png" type="Texture" id=1]
[ext_resource path="res://scenes/battle/Minion.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/battle/ActionBar.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/battle/BattleScene.gd" type="Script" id=4]

[node name="BattleScene" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackLayer" type="CanvasLayer" parent="."]

[node name="Background" type="TextureRect" parent="BackLayer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MainLayer" type="CanvasLayer" parent="."]
layer = 2

[node name="HBox" type="HBoxContainer" parent="MainLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/separation = 16
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LPanel" type="PanelContainer" parent="MainLayer/HBox"]
margin_right = 14.0
margin_bottom = 360.0

[node name="BattleArea" type="VBoxContainer" parent="MainLayer/HBox"]
margin_left = 30.0
margin_right = 610.0
margin_bottom = 360.0
size_flags_horizontal = 3
alignment = 2

[node name="Battlers" type="VBoxContainer" parent="MainLayer/HBox/BattleArea"]
margin_right = 580.0
margin_bottom = 316.0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1

[node name="EnemyTeam" type="HBoxContainer" parent="MainLayer/HBox/BattleArea/Battlers"]
margin_top = 18.0
margin_right = 580.0
margin_bottom = 150.0
alignment = 1

[node name="Minion" parent="MainLayer/HBox/BattleArea/Battlers/EnemyTeam" instance=ExtResource( 2 )]
margin_left = 136.0
margin_right = 236.0
margin_bottom = 132.0
minion_index = 3

[node name="Minion2" parent="MainLayer/HBox/BattleArea/Battlers/EnemyTeam" instance=ExtResource( 2 )]
margin_left = 240.0
margin_right = 340.0
margin_bottom = 132.0
minion_index = 4

[node name="Minion3" parent="MainLayer/HBox/BattleArea/Battlers/EnemyTeam" instance=ExtResource( 2 )]
margin_left = 344.0
margin_right = 444.0
margin_bottom = 132.0
minion_index = 5

[node name="HSeparator" type="HSeparator" parent="MainLayer/HBox/BattleArea/Battlers"]
margin_top = 154.0
margin_right = 580.0
margin_bottom = 162.0
size_flags_horizontal = 3
custom_constants/separation = 8

[node name="PlayerTeam" type="HBoxContainer" parent="MainLayer/HBox/BattleArea/Battlers"]
margin_top = 166.0
margin_right = 580.0
margin_bottom = 298.0
alignment = 1

[node name="Minion" parent="MainLayer/HBox/BattleArea/Battlers/PlayerTeam" instance=ExtResource( 2 )]
margin_left = 136.0
margin_right = 236.0
margin_bottom = 132.0

[node name="Minion2" parent="MainLayer/HBox/BattleArea/Battlers/PlayerTeam" instance=ExtResource( 2 )]
margin_left = 240.0
margin_right = 340.0
margin_bottom = 132.0
minion_index = 1

[node name="Minion3" parent="MainLayer/HBox/BattleArea/Battlers/PlayerTeam" instance=ExtResource( 2 )]
margin_left = 344.0
margin_right = 444.0
margin_bottom = 132.0
minion_index = 2

[node name="ActionBar" parent="MainLayer/HBox/BattleArea" instance=ExtResource( 3 )]
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 320.0
margin_right = 580.0
margin_bottom = 360.0

[node name="RPanel" type="PanelContainer" parent="MainLayer/HBox"]
margin_left = 626.0
margin_right = 640.0
margin_bottom = 360.0

[node name="TopLayer" type="CanvasLayer" parent="."]
layer = 3

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

[connection signal="minion_selected" from="MainLayer/HBox/BattleArea/Battlers/EnemyTeam/Minion" to="." method="_on_Minion_selected"]
[connection signal="minion_selected" from="MainLayer/HBox/BattleArea/Battlers/EnemyTeam/Minion2" to="." method="_on_Minion_selected"]
[connection signal="minion_selected" from="MainLayer/HBox/BattleArea/Battlers/EnemyTeam/Minion3" to="." method="_on_Minion_selected"]
[connection signal="minion_selected" from="MainLayer/HBox/BattleArea/Battlers/PlayerTeam/Minion" to="." method="_on_Minion_selected"]
[connection signal="minion_selected" from="MainLayer/HBox/BattleArea/Battlers/PlayerTeam/Minion2" to="." method="_on_Minion_selected"]
[connection signal="minion_selected" from="MainLayer/HBox/BattleArea/Battlers/PlayerTeam/Minion3" to="." method="_on_Minion_selected"]
[connection signal="select_back" from="MainLayer/HBox/BattleArea/ActionBar" to="." method="_on_ActionBar_select_back"]
[connection signal="select_skill" from="MainLayer/HBox/BattleArea/ActionBar" to="." method="_on_ActionBar_select_skill"]
[connection signal="select_skip" from="MainLayer/HBox/BattleArea/ActionBar" to="." method="_on_ActionBar_select_skip"]
